--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "next": "10.0.6",
+    "next-images": "^1.7.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
+    "react-spring": "^8.0.27",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.12.0"
   }
 }
