--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "css-loader": "^5.0.2",
+    "file-loader": "^6.2.0",
     "next": "10.0.6",
     "next-images": "^1.7.0",
+    "next-pwa": "^5.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
     "react-spring": "^8.0.27",
-    "styled-components": "^5.2.1"
+    "style-loader": "^2.0.0",
+    "styled-components": "^5.2.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0"
